--- a/templates/base.html
+++ b/templates/base.html
@@ -51,24 +51,26 @@
             {% include "left_navbar.html" %}
         </div><!--/span-->
 
-        {% block mainbody %}
         <div class="span9">
+            {% block mainbody %}
           <div class="row-fluid">
 
+
           </div>
-        </div>
-        <div class="row-fluid">
+          <div class="row-fluid">
 
-        </div><!--/row-->
-        {% endblock %}
+          </div><!--/row-->
+            {% endblock %}
+          <hr>
+     <footer>
+        <p>&copy; Company DNT</p>
+      </footer>
 
-        <hr>
-        <footer>
-          <p>&copy; Company DNT</p>
-        </footer>
+    </div><!--/.fluid-container-->
+    <div>
 
-       </div><!--/.fluid-container-->
 
+</div>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -85,6 +87,7 @@
     <script src="{% static 'assets/js/bootstrap-collapse.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap-carousel.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap-typeahead.js' %}"></script>
+      </div>
     </div>
   </body>
 </html>
