完成三个功能的迁移 一些前端文件提交

--- a/templates/alertinfos/index.html
+++ b/templates/alertinfos/index.html
@@ -8,7 +8,7 @@
                         <select id="level" name="warning-level" class="form-control">
                             <option>--- 请选择告警级别 ---</option>
                         {% for level in levels %}
-                            <option>{{ level[0] }}</option>
+                            <option>{{ level.0 }}</option>
                         {% endfor %}
                         </select>
                     </form>
