--- a/templates/left_navbar.html
+++ b/templates/left_navbar.html
@@ -10,6 +10,7 @@
               -->
               <li><a href="/cluster_resource">集群剩余资源</a></li>
               <li><a href="/dcos_yarn">融合集群资源情况</a></li>
+              <li><a href="/show_host">主机查询</a></li>
 			  <li><a href="#"></a></li>
            </ul>
 </div><!--/.well -->
