--- a/templates/show_host/show_host.html
+++ b/templates/show_host/show_host.html
@@ -88,7 +88,7 @@
     </script>
     <script>
         $(document).ready(function () {
-            $("#search_info").keyup(function () {
+            $("#search_info").change(function () {
 
                 var search_info = $("#search_info").val();
                 var cluster = $("#clusters").val();
