--- a/templates/left_navbar.html
+++ b/templates/left_navbar.html
@@ -1,7 +1,7 @@
 <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">告警</li>
-              <li><a href="/">告警历史信息统计</a></li>
+              <li><a href="/index">告警历史信息统计</a></li>
               <li><a href="/cmdb/tag">标签 - 主机信息</a></li>
               <li><a href="#">DCOS集群</a></li>
 <!--              <li><a href="/">告警历史信息统计</a></li>
