--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,57 @@
     </div><!--/.fluid-container-->
     <div>
 
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="clearlogsmodal" tabindex="-1" role="dialog" 
+   aria-labelledby="myModalLabel" aria-hidden="true">
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" 
+               data-dismiss="modal" aria-hidden="true">
+                  &times;
+            </button>
+            <h4 class="modal-title" id="clearlogslabel">
+               模态框（Modal）标题
+            </h4>
+         </div>
+         <div class="modal-body" id="clearlogsbody">
+            在这里添加一些文本
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-primary" onclick="$('#clearlogsmodal').modal('hide');">
+               关闭
+            </button>
+         </div>
+      </div><!-- /.modal-content -->
+    </div>
+</div>
+
+<div class="modal fade" id="showlogsmodal" tabindex="-1" role="dialog" 
+   aria-labelledby="myModalLabel" aria-hidden="true">
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" 
+               data-dismiss="modal" aria-hidden="true">
+                  &times;
+            </button>
+            <h4 class="modal-title" id="showlogslabel">
+               模态框（Modal）标题
+            </h4>
+         </div>
+         <div class="modal-body" id="showlogsbody">
+            在这里添加一些文本
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-primary" onclick="$('#showlogsmodal').modal('hide');">
+               关闭
+            </button>
+         </div>
+      </div><!-- /.modal-content -->
+    </div>
+</div>
+<!-- /.modal -->
 
 </div>
     <!-- Le javascript
