日志删除和写空

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,8 +103,8 @@
                data-dismiss="modal" aria-hidden="true">
                   &times;
             </button>
-            <h4 class="modal-title" id="showlogslabel">
-               模态框（Modal）标题
+            <h4 class="modal-title">
+               显示<span id="showlogip">hostip</span>日志文件
             </h4>
          </div>
          <div class="modal-body" id="showlogsbody">
