--- a/static/assets/css/bootstrap.css
+++ b/static/assets/css/bootstrap.css
@@ -2878,13 +2878,12 @@ button.btn.small, input[type="submit"].btn.small {
 }
 .modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 10%;
+  left: 10%;
   z-index: 1050;
   max-height: 500px;
   overflow: auto;
-  width: 560px;
-  margin: -250px 0 0 -280px;
+  margin: auto;
   background-color: #ffffff;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -2910,7 +2909,7 @@ button.btn.small, input[type="submit"].btn.small {
   top: -25%;
 }
 .modal.fade.in {
-  top: 50%;
+  top: 10%;
 }
 .modal-header {
   padding: 9px 15px;
