--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
     <meta name="author" content="">
     {% load static %}
     <!-- Le styles -->
+    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'assets/css/bootstrap.css' %}" rel="stylesheet">
-	<link href="{% static 'assets/css/example-fluid-layout.css' %}" rel="stylesheet">
-	<link href="{% static 'assets/css/bootstrap-responsive.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/css/example-fluid-layout.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/css/bootstrap-responsive.css' %}" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <!--<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>>
@@ -70,7 +71,7 @@
 
 <!-- 模态框（Modal） -->
 <div class="modal fade" id="clearlogsmodal" tabindex="-1" role="dialog" 
-   aria-labelledby="myModalLabel" aria-hidden="true">
+   aria-labelledby="myModalLabel" aria-hidden="true" style="width:80%">
    <div class="modal-dialog">
       <div class="modal-content">
          <div class="modal-header">
@@ -95,7 +96,7 @@
 </div>
 
 <div class="modal fade" id="showlogsmodal" tabindex="-1" role="dialog" 
-   aria-labelledby="myModalLabel" aria-hidden="true">
+   aria-labelledby="myModalLabel" aria-hidden="true" style="width:80%">
    <div class="modal-dialog">
       <div class="modal-content">
          <div class="modal-header">
