页面修改，查看并删除退出容器

--- a/templates/base.html
+++ b/templates/base.html
@@ -138,6 +138,7 @@
     <script src="{% static 'assets/js/bootstrap-collapse.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap-carousel.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap-typeahead.js' %}"></script>
+    <script src="{% static 'host_operation.js' %}"></script>
       </div>
     </div>
   </body>
