--- a/templates/show_host/show_host.html
+++ b/templates/show_host/show_host.html
@@ -26,7 +26,7 @@
             <br>
             <br>
         </div>
-        <p>选中<span id="numofselect">0</span>个<a href='#' onclick="clearlogs()">action</a></p>
+        <p>选中<span id="numofselect">0</span>个<a href='#' onclick="cleanhosts()">清理主机</a><span>||</span><a href='#' onclick='extractip()'>提取主机ip</a></p>
         <div id="table">
             <table class="table table-bordered table-striped" id="tb">
                 <thead id="a1">
