--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,32 @@
       </div><!-- /.modal-content -->
     </div>
 </div>
+
+<div class="modal fade" id="showdockermodal" tabindex="-1" role="dialog" 
+   aria-labelledby="myModalLabel" aria-hidden="true" style="width:80%">
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" 
+               data-dismiss="modal" aria-hidden="true">
+                  &times;
+            </button>
+            <h4 class="modal-title">
+               显示<span id="showdockerip">hostip</span>退出容器
+            </h4>
+         </div>
+         <div class="modal-body" id="showdockerbody">
+            在这里添加一些文本
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-primary" onclick="$('#showdockermodal').modal('hide');">
+               关闭
+            </button>
+            <button class="btn btn-warning" onclick="cleanall()">全部清理</button>
+         </div>
+      </div><!-- /.modal-content -->
+    </div>
+</div>
 <!-- /.modal -->
 
 </div>
