--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,31 @@
     </div>
 </div>
 
+<div class="modal fade" id="addhostmodal" tabindex="-1" role="dialog"
+   aria-labelledby="myModalLabel" aria-hidden="true" style="width:80%">
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close"
+               data-dismiss="modal" aria-hidden="true">
+                  &times;
+            </button>
+            <h4 class="modal-title">
+               显示日志文件
+            </h4>
+         </div>
+         <div class="modal-body" id="addhostbody">
+            在这里添加一些文本
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-primary" onclick="$('#addhostmodal').modal('hide');">
+               关闭
+            </button>
+         </div>
+      </div><!-- /.modal-content -->
+    </div>
+</div>
+
 <div class="modal fade" id="showlogsmodal" tabindex="-1" role="dialog" 
    aria-labelledby="myModalLabel" aria-hidden="true" style="width:80%">
    <div class="modal-dialog">
