--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                   &times;
             </button>
             <h4 class="modal-title">
-               显示日志文件
+               添加主机
             </h4>
          </div>
          <div class="modal-body" id="addhostbody">
@@ -115,6 +115,7 @@
             <button type="button" class="btn btn-primary" onclick="$('#addhostmodal').modal('hide');">
                关闭
             </button>
+            <button class="btn btn-success" onclick="checkandaddhost()">添加</button>
          </div>
       </div><!-- /.modal-content -->
     </div>
